--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Programação WEB - Turma A</title>
 </head>
 <body>
-    
+    <h1>Eu sou o título de nível 1</h1>
+    <h2>Eu sou o título de nível 2</h2>
+    <p>Eu sou um parágrafo</p>
 </body>
 </html>
