--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Eu sou o título de nível 1</h1>
     <h2>Eu sou o título de nível 2</h2>
     <p>Eu sou um parágrafo</p>
+    <img src="download.jpg" alt="lula">
 </body>
 </html>
