--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <h1>Eu sou o título de nível 1</h1>
     <h2>Eu sou o título de nível 2</h2>
     <p>Eu sou um parágrafo</p>
-    <img src="download.jpg" alt="lula">
+
+    <input type="text">
+    <input type="password">
+    <input type="number">
+    <!-- <img src="download.jpg" alt="lula"> -->
 </body>
 </html>
