--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <input type="text">
     <input type="password">
     <input type="number">
+    <input type="week">
+    <input type="tel">
     <!-- <img src="download.jpg" alt="lula"> -->
 </body>
 </html>
