--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <input type="number">
     <input type="week">
     <input type="tel">
+    <input type="color">
+    <input type="range">
     <!-- <img src="download.jpg" alt="lula"> -->
 </body>
 </html>
