--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programação WEB - Turma A</title>
+
+    <link rel="stylesheet" href="estilo.css">
 </head>
 
 <body>
+
     <h1>Eu sou o título de nível 1</h1>
     <h2>Eu sou o título de nível 2</h2>
+    <h3>Eu sou o título de nível 3</h3>
     <p>Eu sou um parágrafo</p>
     <p>Bom dia Gabriel</p>
 
