Alteracao box model css

--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
 </head>
 
 <body>
+    <div class="titulos">
+        <h1>Eu sou o título de nível 1</h1>
+        <h2>Eu sou o título de nível 2</h2>
+        <h3>Eu sou o título de nível 3</h3>
+    </div>
+    <div id="paragrafos">
+        <p>Eu sou um parágrafo</p>
+        <p>Bom dia Gabriel</p>
+    </div>
 
-    <h1>Eu sou o título de nível 1</h1>
-    <h2>Eu sou o título de nível 2</h2>
-    <h3>Eu sou o título de nível 3</h3>
-    <p>Eu sou um parágrafo</p>
-    <p>Bom dia Gabriel</p>
-
+        <input class="input-bao" type="text">
     <input type="text">
     <input type="password">
     <input type="number">
