--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <input type="color">
     <input type="range">
     <!-- <img src="download.jpg" alt="lula"> -->
+
+    <script src="script.js"></script>
 </body>
 
 </html>
